# musichelper

./: Cargo.toml  README.md  musichelper.json  tuning_guitar.json  tunings.json
Prototype/: musichelper.py
src/: TODO.md  args.rs  data.rs  default_data_file.json  display.rs  highlights.rs  main.rs  musichelper.rs  tunings.json
