[package]
edition = "2021"
name = "musichelper"
version = "0.1.0"
authors = ["Pranav Hundekari <psh@a.gml>"]
description = "A tool to learn the string instrument fretboard for a tuning."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
serde_json = "1.0"
