[package]
authors = ["Pranav Hundekari <psh@a.gml>"]
description = "A tool to learn the string instrument fretboard for a tuning."
edition = "2021"
name = "musichelper"
readme = "README.md"
version = "0.1.0"

[dependencies]
clap = {version = "4.0.10", features = ["derive"]}
colored = "2.0.0"
itertools = "0.10.5"
serde_json = "1.0"
